* configure.in Makefile.am proxy/Makefile.am proxy/libvirt_proxy.c   proxy/proxy.h proxy/proxy_client.c src/internal.h src/xen_internal.c   src/xend_internal.c: started working on a proxy to access xend   for unpriviledged users to avoid opening xend HTTP service to   serve those read-only operations. Daniel

--- a/configure.in
+++ b/configure.in
@@ -256,4 +256,4 @@ AC_OUTPUT(Makefile src/Makefile include/Makefile docs/Makefile \
           libvirt.pc libvirt.spec \
 	  include/libvirt/Makefile include/libvirt/libvirt.h \
 	  python/Makefile python/tests/Makefile \
-          tests/Makefile)
+          tests/Makefile proxy/Makefile)
