* libvirt.spec.in proxy/Makefile.am src/proxy_internal.c   src/xen_internal.c: fixing the proxy installation, integrate in   the spec file and fix a few bugs in the proxy, seems to behave   correctly now. * docs/apibuild.py docs/*: fixing the doc and API generator Daniel

--- a/libvirt.spec.in
+++ b/libvirt.spec.in
@@ -75,6 +75,7 @@ rm -fr %{buildroot}
 %doc %{_mandir}/man1/virsh.1*
 %{_bindir}/virsh
 %{_libdir}/lib*.so.*
+%{_libexecdir}/libvirt_proxy
 
 %files devel
 %defattr(-, root, root)
