* NEWS docs/* configure.in libvirt.spec.in include/libvirt/libvirt.h:   preparing release of 0.1.2 * src/proxy_internal.c: don't warn on open if using http and not the   proxy. Daniel

--- a/libvirt.spec.in
+++ b/libvirt.spec.in
@@ -104,6 +104,10 @@ rm -fr %{buildroot}
 %doc docs/examples/python
 
 %changelog
+* Mon Jul  3 2006 Daniel Veillard <veillard@redhat.com> 0.1.2-1
+- added a proxy mechanism for read only access using httpu
+- fixed header includes paths
+
 * Wed Jun 21 2006 Daniel Veillard <veillard@redhat.com> 0.1.1-1
 - extend and cleanup the driver infrastructure and code
 - python examples
