* configure.in libvirt.spec.in docs/* NEWS: preparing release of   libvirt-0.1.3 * src/xend_internal.c: uninitialized var and disable TCP slow start Daniel

--- a/libvirt.spec.in
+++ b/libvirt.spec.in
@@ -104,6 +104,10 @@ rm -fr %{buildroot}
 %doc docs/examples/python
 
 %changelog
+* Tue Jul 11 2006 Daniel Veillard <veillard@redhat.com> 0.1.3-1
+- support for HVM Xen guests
+- various bugfixes
+
 * Mon Jul  3 2006 Daniel Veillard <veillard@redhat.com> 0.1.2-1
 - added a proxy mechanism for read only access using httpu
 - fixed header includes paths
