* src/xml.c: applied patch from Peter Vetere to pass down the   UUID from the XML description if present when creating the domain. Daniel

--- a/libvirt.spec.in
+++ b/libvirt.spec.in
@@ -11,8 +11,10 @@ BuildRequires: xen python python-devel
 Requires: xen
 Requires: libxml2
 Requires: readline
+Requires: ncurses
 BuildRequires: libxml2-devel
 BuildRequires: readline-devel
+BuildRequires: ncurses-devel
 Obsoletes: libvir
 ExclusiveArch: i386 x86_64
 
