* proxy/Makefile.am src/xen_internal.c src/xend_internal.c: cleanup   code when compiled for the proxy, changed the command line macro and   remove warnings. Daniel

--- a/proxy/Makefile.am
+++ b/proxy/Makefile.am
@@ -2,7 +2,7 @@
 
 INCLUDES = -I$(top_builddir)/include -I@top_srcdir@/include \
            -I@top_srcdir@/proxy -I@top_srcdir@/src @LIBXML_CFLAGS@ \
-	   -DXEN_RO
+	   -DPROXY
 
 
 libexec_PROGRAMS = libvirt_proxy
