--- a/libvirt.spec.in
+++ b/libvirt.spec.in
@@ -17,7 +17,7 @@ BuildRequires: libxml2-devel
 BuildRequires: readline-devel
 BuildRequires: ncurses-devel
 Obsoletes: libvir
-ExclusiveArch: i386 x86_64
+ExclusiveArch: i386 x86_64 ia64
 
 %description
 This C library provides an API to use the Xen virtualization framework,
