--- a/proxy/Makefile.am
+++ b/proxy/Makefile.am
@@ -6,11 +6,11 @@ INCLUDES = -I$(top_builddir)/include -I@top_srcdir@/include \
 
 
 libexec_PROGRAMS = libvirt_proxy
-LIBS=
 
 libvirt_proxy_SOURCES = libvirt_proxy.c @top_srcdir@/src/xend_internal.c \
 	    @top_srcdir@/src/xen_internal.c @top_srcdir@/src/virterror.c \
-	    @top_srcdir@/src/sexpr.c
+	    @top_srcdir@/src/sexpr.c @top_srcdir@/src/xml.c \
+            @top_srcdir@/src/xs_internal.c
 libvirt_proxy_LDFLAGS =
 libvirt_proxy_DEPENDENCIES =
 libvirt_proxy_LDADD =
