--- a/configure.in
+++ b/configure.in
@@ -186,6 +186,7 @@ if test "$with_python" != "no" ; then
 	    if test -x "$PYTHON"
 	    then
 	        echo Found python in environment PYTHON=$PYTHON
+		with_python=`$PYTHON -c "import sys; print sys.exec_prefix"`
 	    else
 		AC_PATH_PROG(PYTHON, python python2.6 python2.5 python2.4 python2.3 python2.2 python2.1 python2.0 python1.6 python1.5)
 	    fi
@@ -202,17 +203,17 @@ if test "$with_python" != "no" ; then
 	   -d $with_python/lib/python$PYTHON_VERSION/site-packages
 	then
 	    PYTHON_INCLUDES=$with_python/include/python$PYTHON_VERSION
-	    PYTHON_SITE_PACKAGES=$with_python/lib/python$PYTHON_VERSION/site-packages
+	    PYTHON_SITE_PACKAGES=$libdir/python$PYTHON_VERSION/site-packages
 	else
 	    if test -r $prefix/include/python$PYTHON_VERSION/Python.h
 	    then
-	        PYTHON_INCLUDES='$(prefix)/include/python$(PYTHON_VERSION)'
-		PYTHON_SITE_PACKAGES='$(libdir)/python$(PYTHON_VERSION)/site-packages'
+	        PYTHON_INCLUDES=$prefix/include/python$PYTHON_VERSION
+	        PYTHON_SITE_PACKAGES=$libdir/python$PYTHON_VERSION/site-packages
 	    else
 		if test -r /usr/include/python$PYTHON_VERSION/Python.h
 		then
 		    PYTHON_INCLUDES=/usr/include/python$PYTHON_VERSION
-		    PYTHON_SITE_PACKAGES='$(libdir)/python$(PYTHON_VERSION)/site-packages'
+	            PYTHON_SITE_PACKAGES=$libdir/python$PYTHON_VERSION/site-packages
 		else
 		    echo could not find python$PYTHON_VERSION/Python.h
 		fi
@@ -227,7 +228,7 @@ if test "$with_python" != "no" ; then
     then
         pythondir='$(PYTHON_SITE_PACKAGES)'
     else
-        pythondir='$(libdir)/python${PYTHON_VERSION}/site-packages'
+        pythondir='$(libdir)/python$(PYTHON_VERSION)/site-packages'
     fi
 else
     PYTHON=
@@ -240,11 +241,10 @@ else
     PYTHON_SUBDIR=
 fi
 AC_SUBST(pythondir)
-AC_SUBST(PYTHON)
+AC_SUBST(PYTHON_SUBDIR)
 AC_SUBST(PYTHON_VERSION)
 AC_SUBST(PYTHON_INCLUDES)
 AC_SUBST(PYTHON_SITE_PACKAGES)
-AC_SUBST(PYTHON_SUBDIR)
 
 # very annoying
 rm -f COPYING
