* NEWS configure.in doc//* include/libvirt/libvirt.h   include/libvirt/libvirt.h.in: preparing release of 0.1.4,   regenerated docs, fixed a few things * src/proxy_internal.c src/test.c src/xend_internal.c:   a few trivial fixes Daniel

--- a/include/libvirt/libvirt.h.in
+++ b/include/libvirt/libvirt.h.in
@@ -352,7 +352,7 @@ int			virDomainPinVcpu	(virDomainPtr domain,
 #define VIR_UNUSE_CPU(cpumap,cpu)	(cpumap[(cpu)/8] &= ~(1<<((cpu)%8)))
 
 /**
- * VIR_CPU_MAPLEN
+ * VIR_CPU_MAPLEN:
  * @cpu: number of physical CPUs
  *
  * This macro is to be used in conjonction with virDomainPinVcpu() API.
