* TODO libvirt.spec.in: update * configure.in include/libvirt/virterror.h src/Makefile.am   src/conf.c src/conf.h src/virterror.c src/xen_internal.c:   adding a subset of Xen config file parser, and serializer * tests/Makefile.am tests/conftest.c tests/test_conf.sh   tests/confdata/Makefile.am tests/confdata/fc4.conf   tests/confdata/fc4.out: adding test program for config in and out Daniel

--- a/libvirt.spec.in
+++ b/libvirt.spec.in
@@ -7,7 +7,7 @@ Group: Development/Libraries
 Source: libvirt-%{version}.tar.gz
 BuildRoot: %{_tmppath}/%{name}-%{version}-root
 URL: http://libvir.org/
-BuildRequires: xen python python-devel
+BuildRequires: python python-devel
 Requires: xen
 Requires: libxml2
 Requires: readline
@@ -107,6 +107,25 @@ rm -fr %{buildroot}
 %doc docs/examples/python
 
 %changelog
+* Wed Aug 16 2006 Daniel Veillard <veillard@redhat.com> 0.1.4-1
+- vCPUs and affinity support
+- more complete XML, console and boot options
+- specific features support
+- enforced read-only connections
+- various improvements, bug fixes
+
+* Wed Aug  2 2006 Jeremy Katz <katzj@redhat.com> - 0.1.3-6
+- add patch from pvetere to allow getting uuid from libvirt
+
+* Wed Aug  2 2006 Jeremy Katz <katzj@redhat.com> - 0.1.3-5
+- build on ia64 now
+
+* Thu Jul 27 2006 Jeremy Katz <katzj@redhat.com> - 0.1.3-4
+- don't BR xen, we just need xen-devel
+
+* Thu Jul 27 2006 Daniel Veillard <veillard@redhat.com> 0.1.3-3
+- need rebuild since libxenstore is now versionned
+
 * Mon Jul 24 2006 Mark McLoughlin <markmc@redhat.com> - 0.1.3-2
 - Add BuildRequires: xen-devel
 
