--- a/configure.in
+++ b/configure.in
@@ -257,4 +257,4 @@ AC_OUTPUT(Makefile src/Makefile include/Makefile docs/Makefile \
 	  include/libvirt/Makefile include/libvirt/libvirt.h \
 	  python/Makefile python/tests/Makefile \
           tests/Makefile proxy/Makefile \
-          tests/virshdata/Makefile)
+          tests/virshdata/Makefile tests/confdata/Makefile)
