* src/Makefile.am: add a tst target to ease building test progs * src/xend_internal.c: fix the reconnection problem to xend pointed   by Philippe Berthault * tests/Makefile.am tests/reconnect.c: add a specific test case Daniel

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -35,3 +35,8 @@ virsh_LDFLAGS =
 virsh_DEPENDENCIES = $(DEPS)
 virsh_LDADD = $(LDADDS) $(VIRSH_LIBS)
 
+#
+# target to ease building test programs
+#
+tst: tst.c
+	$(CC) $(CFLAGS) -I../include -o tst tst.c .libs/libvirt.a -lxml2 -lxenstore -lpthread
