--- a/proxy/Makefile.am
+++ b/proxy/Makefile.am
@@ -2,8 +2,8 @@
 
 INCLUDES = -I$(top_builddir)/include -I@top_srcdir@/include \
            -I@top_srcdir@/proxy -I@top_srcdir@/src @LIBXML_CFLAGS@ \
-	   -DPROXY
-
+	   -DPROXY  -DLOCALEBASEDIR=\""$(datadir)/locale"\" \
+           -DGETTEXT_PACKAGE=\"$(PACKAGE)\"
 
 libexec_PROGRAMS = libvirt_proxy
 
