* docs/* libvirt.spec.in configure.in NEWS: preparing release of 0.1.7 Daniel

--- a/libvirt.spec.in
+++ b/libvirt.spec.in
@@ -111,6 +111,10 @@ rm -fr %{buildroot}
 %doc docs/examples/python
 
 %changelog
+* Fri Sep 22 2007 Daniel Veillard <veillard@redhat.com> 0.1.7-1
+- Fix bug when running against xen-3.0.3 hypercalls
+- Fix memory bug when getting vcpus info from xend
+
 * Fri Sep 22 2006 Daniel Veillard <veillard@redhat.com> 0.1.6-1
 - Support for localization
 - Support for new Xen-3.0.3 cdrom and disk configuration
