* libvirt.spec.in: libvirt-devel depends on pkgconfig * proxy/libvirt_proxy.c src/libvirt.c src/proxy_internal.[ch]   src/xs_internal.[ch]: the virtGetOsType entry point was calling   the xenstore directly instead of going though driver, refactored   and implemented a specific new RPC with the proxy when this is   called as non-root fixes rhbz#214264 . Daniel

--- a/libvirt.spec.in
+++ b/libvirt.spec.in
@@ -30,6 +30,7 @@ and the virsh command line tool to control virtual domains.
 Summary: Libraries, includes, etc. to compile with the libvirt library
 Group: Development/Libraries
 Requires: libvirt = %{version}
+Requires: pkgconfig
 Obsoletes: libvir-devel
 
 %description devel
