* configure.in: update for ALL_LINGUAS * po/*.po: updated with strings from Red Hat translators Daniel

--- a/configure.in
+++ b/configure.in
@@ -248,7 +248,12 @@ AC_SUBST(PYTHON_SITE_PACKAGES)
 
 AM_GNU_GETTEXT_VERSION([0.14.1])
 AM_GNU_GETTEXT([external])
-ALL_LINGUAS=en_GB
+if test -d po
+then
+    ALL_LINGUAS=`(cd po > /dev/null && ls *.po) | sed 's+\.po$++'`
+else
+    ALL_LINGUAS="af am ar as be bg bn_IN bn ca cs cy da de el en_GB es et eu_ES fa fi fr gl gu he hi hr hu hy id is it ja ka kn ko ku lo lt lv mk ml mr ms my nb nl nn no nso or pa pl pt_BR pt ro ru si sk sl sq sr@Latn sr sv ta te th tr uk ur vi zh_CN zh_TW zu"
+fi
 
 # very annoying
 rm -f COPYING
