* configure.in libvirt.spec.in docs/*.html include/libvirt/libvirt.h:   preparing release of 0.1.11 * docs/Makefile.am libvirt.spec.in: package libvirt.rng in * po/*: translation update Daniel

--- a/libvirt.spec.in
+++ b/libvirt.spec.in
@@ -84,6 +84,7 @@ rm -fr %{buildroot}
 %{_bindir}/virsh
 %{_libdir}/lib*.so.*
 %attr(4755, root, root) %{_libexecdir}/libvirt_proxy
+%doc docs/libvirt.rng
 
 %files devel
 %defattr(-, root, root)
@@ -112,6 +113,11 @@ rm -fr %{buildroot}
 %doc docs/examples/python
 
 %changelog
+* Wed Dec 20 2006 Daniel Veillard <veillard@redhat.com> 0.1.11-1
+- finish inactive Xen domains support
+- memory leak fix
+- RelaxNG schemas for XML configs
+
 * Wed Dec 20 2006 Daniel Veillard <veillard@redhat.com> 0.1.10-1
 - support for inactive Xen domains
 - improved support for Xen display and vnc
