Added code coverage testing enabled via --enable-test-coverage

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,6 @@
 ## Process this file with automake to produce Makefile.in
 
-SUBDIRS = src qemud proxy include docs @PYTHON_SUBDIR@ tests po
+SUBDIRS = src qemud proxy include docs @PYTHON_SUBDIR@ tests po scripts
 
 ACLOCAL_AMFLAGS = -I m4
 
@@ -21,4 +21,23 @@ check-local: all tests
 tests:
 	@(cd docs/examples ; $(MAKE) MAKEFLAGS+=--silent tests)
 	@(if [ "@PYTHON_SUBDIR@" != "" ] ; then cd python ; \
-	  $(MAKE) MAKEFLAGS+=--silent tests ; fi)	
+	  $(MAKE) MAKEFLAGS+=--silent tests ; fi)
+
+cov: cov-recursive cov-am
+
+clean-cov:
+	rm -rf $(top_builddir)/coverage
+	cd src && $(MAKE) $(AM_MAKEFLAGS) clean-cov
+
+cov-recursive:
+	cd src && $(MAKE) $(AM_MAKEFLAGS) cov
+
+cov-am:
+	rm -rf $(top_builddir)/coverage
+	mkdir $(top_builddir)/coverage
+	perl $(srcdir)/scripts/coverage-report.pl src/*.cov > $(top_builddir)/coverage/index.xml
+	xsltproc $(srcdir)/scripts/coverage-report.xsl \
+	  $(top_builddir)/coverage/index.xml \
+	  > $(top_builddir)/coverage/index.html
+	for i in $(top_builddir)/src/*.gcov ; do o=`echo $$i | sed -e 's,$(top_builddir)/src,coverage,'` ; \
+	  perl $(srcdir)/scripts/coverage-report-entry.pl $$i > $$o.html ; done
