Added libsysfs-devel dep & pre-create config/socket dir

--- a/libvirt.spec.in
+++ b/libvirt.spec.in
@@ -19,6 +19,7 @@ BuildRequires: libxml2-devel
 BuildRequires: readline-devel
 BuildRequires: ncurses-devel
 BuildRequires: gettext
+BuildRequires: libsysfs-devel
 Obsoletes: libvir
 ExclusiveArch: i386 x86_64 ia64
 
@@ -65,6 +66,8 @@ rm -f $RPM_BUILD_ROOT%{_libdir}/*.la
 rm -f $RPM_BUILD_ROOT%{_libdir}/*.a
 rm -f $RPM_BUILD_ROOT%{_libdir}/python*/site-packages/*.la
 rm -f $RPM_BUILD_ROOT%{_libdir}/python*/site-packages/*.a
+install -d -m 0755 $RPM_BUILD_ROOT%{_sysconfdir}/libvirt/qemu/networks/
+install -d -m 0755 $RPM_BUILD_ROOT%{_localstatedir}/run/libvirt/
 %find_lang %{name}
 
 %clean
@@ -83,6 +86,8 @@ rm -fr %{buildroot}
 %doc %{_mandir}/man1/virsh.1*
 %{_bindir}/virsh
 %{_libdir}/lib*.so.*
+%config %{_sysconfdir}/libvirt/qemu/networks/
+%{_localstatedir}/run/libvirt/
 %attr(4755, root, root) %{_libexecdir}/libvirt_proxy
 %attr(0755, root, root) %{_libexecdir}/libvirt_qemud
 %doc docs/libvirt.rng
