--- a/libvirt.spec.in
+++ b/libvirt.spec.in
@@ -1,9 +1,15 @@
 # -*- rpm-spec -*-
 
+# This macro is used for the continuous automated builds. It just
+# allows an extra fragment based on the timestamp to be appended
+# to the release. This distinguishes automated builds, from formal
+# Fedora RPM builds
+%define _extra_release %{?dist:%{dist}}%{!?dist:%{?extra_release:%{extra_release}}}
+
 Summary: Library providing an API to use the Xen virtualization
 Name: libvirt
 Version: @VERSION@
-Release: 4%{?dist}
+Release: 4%{?_extra_release}
 License: LGPL
 Group: Development/Libraries
 Source: libvirt-%{version}.tar.gz
